--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "expo-router": "~4.0.9",
     "expo-video": "~2.0.5",
     "expo-web-browser": "~14.0.1",
+    "lightningcss": "^1.29.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
