--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@ yarn-error.log*
 # Babel
 .babelrc
 
+# Bundle artifact
+*.jsbundle
+
 # Android
 android/.gradle/
 android/.idea/
@@ -23,20 +26,31 @@ android/build/
 android/local.properties
 android/*.keystore
 android/*.jks
+build/
+.idea
+.gradle
+local.properties
+*.iml
+*.hprof
+.cxx/
+*.keystore
+!debug.keystore
+.kotlin/
 
 # iOS
 ios/build/
-ios/Pods/
+**/Pods/
 ios/*.xcworkspace
 ios/*.xcodeproj/xcuserdata/
 ios/*.xcuserdatad/
 ios/*.xcuserstate
+/vendor/bundle/
 
 # Fastlane
-fastlane/report.xml
-fastlane/Preview.html
-fastlane/screenshots
-fastlane/test_output
+**/fastlane/report.xml
+**/fastlane/Preview.html
+**/fastlane/screenshots
+**/fastlane/test_output
 
 # Env files
 .env
@@ -63,8 +77,42 @@ logs/
 *.mobileprovision
 *.orig
 
+# Temporary files created by Metro to check the health of the file watcher
+.metro-health-check*
+
 # Ignore all files in the following directories
 **/dist/
 **/coverage/
 **/tmp/
 **/temp/
+
+# Testing
+/coverage
+
+# Xcode
+#
+build/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+xcuserdata
+*.xccheckout
+*.moved-aside
+DerivedData
+*.hmap
+*.ipa
+*.xcuserstate
+**/.xcode.env.local
+
+# Yarn
+.yarn/*
+!.yarn/patches
+!.yarn/plugins
+!.yarn/releases
+!.yarn/sdks
+!.yarn/versions
