--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native": "0.77.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
+    "react-native-track-player": "3.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
