--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react-native": "0.77.1",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
-    "react-native-track-player": "3.2",
+    "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.17"
   },
