--- a/package.json
+++ b/package.json
@@ -11,15 +11,30 @@
   },
   "dependencies": {
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
+    "@gluestack-style/react": "^1.0.57",
+    "@gluestack-ui/config": "^1.1.20",
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.21",
+    "@gluestack-ui/themed": "^1.1.65",
+    "@gluestack-ui/toast": "^1.0.9",
+    "@react-native-aria/focus": "^0.2.9",
+    "@react-native-aria/interactions": "^0.2.15",
+    "@react-native-aria/overlays": "^0.3.14",
+    "@react-navigation/native": "^7.0.15",
+    "@react-navigation/stack": "^7.0.14",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-native": "0.77.1",
     "react-native-gesture-handler": "^2.24.0",
-    "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated": "^3.17.1",
+    "react-native-safe-area-context": "^5.3.0",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-screens": "^4.9.1",
+    "react-native-svg": "^15.11.2",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
+    "simple-icons": "^14.9.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
