--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.77.1",
+    "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-track-player": "^4.1.1",
