--- a/ios/GrupoRadarRadio/Info.plist
+++ b/ios/GrupoRadarRadio/Info.plist
@@ -39,6 +39,9 @@
 		<string>Foundation.ttf</string>
 		<string>Ionicons.ttf</string>
 		<string>MaterialIcons.ttf</string>
+		<string>FontAwesome6_Regular.ttf</string>
+		<string>FontAwesome6_Brands.ttf</string>
+		<string>FontAwesome6_Solid.ttf</string>
 	</array>
 	<key>UIBackgroundModes</key>
 	<array>
