--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-vector-icons/common": "^11.0.0",
+    "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.77.1",
