--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-native": "0.77.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.2.0",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
