--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "@react-native-aria/overlays": "^0.3.14",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.0.14",
+    "@wix/data": "^1.0.211",
+    "@wix/sdk": "^1.15.14",
+    "@wix/sdk-react": "^0.5.9",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
