Wix Data Fetching & Carousel Update
-Fetched Wix data to CarouselPoster
-Fetched Wix data to News
-Installed Wix packages
-Fixed onclick redirection to news article
-Added built in console logging of api fetch data
-Onclick navigation to Poster
-Removed API Key for github push(for safety purposes)

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
     "@wix/data": "^1.0.211",
     "@wix/sdk": "^1.15.14",
