--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "simple-icons": "^14.9.0",
+    "react-native-video": "^6.11.0",
+    "react-native-video-player": "^0.16.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
