--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-webview": "^13.13.5",
     "simple-icons": "^14.9.0",
+    "react-native-video": "^6.11.0",
+    "react-native-video-player": "^0.16.2",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
