--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@react-native-aria/focus": "^0.2.9",
     "@react-native-aria/interactions": "^0.2.15",
     "@react-native-aria/overlays": "^0.3.14",
-    "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.0.14",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
     "@wix/data": "^1.0.211",
     "@wix/sdk": "^1.15.14",
     "@wix/sdk-react": "^0.5.9",
+    "install": "^0.13.0",
     "nativewind": "^4.1.23",
+    "npm": "^11.2.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.77.1",
