--- a/package.json
+++ b/package.json
@@ -12,16 +12,21 @@
   "dependencies": {
     "@babel/plugin-transform-export-namespace-from": "^7.25.9",
     "@react-native-vector-icons/fontawesome6": "^6.7.1",
+    "@react-navigation/native": "^7.0.18",
+    "@react-navigation/native-stack": "^7.3.2",
     "@wix/data": "^1.0.211",
     "@wix/sdk": "^1.15.14",
     "@wix/sdk-react": "^0.5.9",
+    "install": "^0.13.0",
     "nativewind": "^4.1.23",
+    "npm": "^11.2.0",
     "react": "18.3.1",
     "react-native": "0.77.1",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-reanimated-carousel": "^4.0.2",
-    "react-native-safe-area-context": "^5.2.0",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2",
     "react-native-track-player": "^4.1.1",
     "react-native-vector-icons": "^10.2.0",
     "tailwindcss": "^3.4.17"
