--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
-    "jsx": "react"
+    "jsx": "react",
+    "typeRoots": ["./app/@types", "./node_modules/@types"]
   },
   "extends": "@react-native/typescript-config/tsconfig.json"
 }
