--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.77.1",
     "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.24.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "^3.17.1",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "^5.3.0",
